--- a/settings.json
+++ b/settings.json
@@ -3,12 +3,12 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"AyaaBot", 
-"NomorOwner":"6281398860278",
-"NamaOwner":"Helga Zex", 
-"Gopay" : "Qris",
-"Ovo" : "081398860278",
-"Dana" : "081398860278",
+"NamaBot":"KazuKiBotz", 
+"NomorOwner":"6283113989278",
+"NamaOwner":"KazuKiGans", 
+"Gopay" : "083113989278",
+"Ovo" : "083113989278",
+"Dana" : "082323341102",
 "LolKey": "DashBot",
 "HunterApi":"Ikyy69"
 }
